fix(layout): add css color scheme to fix scrollbars

--- a/examples/src/linearlite/src/app/style.css
+++ b/examples/src/linearlite/src/app/style.css
@@ -5,6 +5,10 @@ body {
   @apply bg-white text-xs text-neutral-600 dark:bg-neutral-900 dark:text-neutral-200 antialiased;
 }
 
+.dark {
+  color-scheme: dark;
+}
+
 @font-face {
   font-family: 'Inter UI';
   font-style: normal;
